--- a/main.ui
+++ b/main.ui
@@ -195,6 +195,9 @@
                   <attribute name="verticalHeaderVisible">
                    <bool>false</bool>
                   </attribute>
+                  <attribute name="verticalHeaderDefaultSectionSize">
+                   <number>23</number>
+                  </attribute>
                   <column>
                    <property name="text">
                     <string/>
@@ -304,6 +307,9 @@
                      <attribute name="verticalHeaderVisible">
                       <bool>false</bool>
                      </attribute>
+                     <attribute name="verticalHeaderDefaultSectionSize">
+                      <number>23</number>
+                     </attribute>
                      <column>
                       <property name="text">
                        <string>Идентификатор ключа</string>
@@ -345,6 +351,9 @@
                      </property>
                      <attribute name="verticalHeaderVisible">
                       <bool>false</bool>
+                     </attribute>
+                     <attribute name="verticalHeaderDefaultSectionSize">
+                      <number>23</number>
                      </attribute>
                      <column>
                       <property name="text">
