Added a button to open a folder with a crl

--- a/main.ui
+++ b/main.ui
@@ -1073,6 +1073,19 @@ border-color: rgb(0, 0, 0);</string>
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="pushButton_27">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="pushButton_4">
             <property name="maximumSize">
              <size>
